--- a/languages/fr.json
+++ b/languages/fr.json
@@ -13,6 +13,20 @@
         "name": "Selectionner un son de tir",
         "hint": "Selectionnez le son que vous voulez entendre quand un tir touche sa cible"
       },
+      "dv-display-show": {
+        "name": "Show DV Display on token hover",
+        "hint": "Shows the DV of all equipped ranged weapons when hovering over another token. Have the token selected you want as source and hover over the token you want to hit"
+      },
+      "dv-display-combat-only": {
+        "name": "Show DV Display in combat only",
+        "hint": "The DV Display is only shown on hover if there is current an active combat encounter"
+      },
+      "dv-display-position": {
+        "name": "Position of the DV Display at the token",
+        "hint": "Sets the position where the DV Display should be shown right next to the hovered token",
+        "left": "Left",
+        "right": "Right"
+      },
       "submit": "Soumettre",
       "add-sound": "Ajouter un Son"
     },
@@ -25,6 +39,9 @@
         "normal": "<b>{attacker} <span class=\"fg-green\">touche</span> {target}</b> (DV: {dv}, {dv-diff} au-dessus)! Jetez les dégâts!",
         "evade": "<b>{attacker} <span class=\"fg-green\">Dépasse le SD à distance</span> </b>({dv}, {dv-diff} au-dessus)<b> pour toucher {target}</b> de {dv-diff-1}! Jetez les dégâts SI aucune esquive n'a été déclarée OU que votre jet dépasse celui de l'esquive"
       }
+    },
+    "dv-display": {
+      "dv-text": "{weapon-name}: {dv-value}DV\n"
     }
   }
 }
