--- a/languages/en.json
+++ b/languages/en.json
@@ -92,8 +92,10 @@
     },
     "poor-weapon-check": {
       "word-indicator": "(poor)",
-      "ranged-weapon": "Upon attacking with the ranged weapon \"{weapon}\",it <b><span class=\"fg-red\">jams</span></b>!",
-      "melee-weapon": "Upon attacking with the melee weapon \"{weapon}\", it <b><span class=\"fg-red\">breaks</span></b>, and is <b>not usable anymore</b>!"
+      "jam-weapon": "Upon attacking with the weapon \"{weapon}\", it <b><span class=\"fg-red\">jams</span></b>!",
+      "break-weapon": "Upon attacking with the weapon \"{weapon}\", it <b><span class=\"fg-red\">breaks</span></b>, and is <b>not usable anymore</b>!",
+      "break-beyond-weapon": "Upon attacking with the weapon \"{weapon}\", it <b><span class=\"fg-red\">breaks beyond repair</span></b>, and is <b>not usable anymore</b>!",
+      "cointoss": "Upon attacking with the weapon \"{weapon}\", <b>a malfunction happens</b>. <b><span class=\"fg-red\">A coin must be tossed</span></b> to determine what happens! Check the rules of the weapon for details!"
     }
   }
 }
