--- a/languages/fr.json
+++ b/languages/fr.json
@@ -39,7 +39,7 @@
         "name": "Cacher le token de couverture en place",
         "hint": "Cache le jeton de couverture lorsqu'il est créé par la macro. Les MJ pourront le voir, mais pas les joueurs."
       },
-      "poor-weapon-jam-check": {
+      "poor-weapon-check": {
         "name": "Check if poor quality weapons should jam",
         "hint": "Checks each attack roll if a poor quality weapon should jam or break. Do mind that quality of weapons is noted in their weapon name such as (Poor)! This is important for this to work!"
       },
@@ -92,8 +92,10 @@
     },
     "poor-weapon-check": {
       "word-indicator": "(poor)",
-      "ranged-weapon": "Upon attacking with the ranged weapon \"{weapon}\",it <b><span class=\"fg-red\">jams</span></b>!",
-      "melee-weapon": "Upon attacking with the melee weapon \"{weapon}\", it <b><span class=\"fg-red\">breaks</span></b>, and is <b>not usable anymore</b>!"
+      "jam-weapon": "Upon attacking with the weapon \"{weapon}\", it <b><span class=\"fg-red\">jams</span></b>!",
+      "break-weapon": "Upon attacking with the weapon \"{weapon}\", it <b><span class=\"fg-red\">breaks</span></b>, and is <b>not usable anymore</b>!",
+      "break-beyond-weapon": "Upon attacking with the weapon \"{weapon}\", it <b><span class=\"fg-red\">breaks beyond repair</span></b>, and is <b>not usable anymore</b>!",
+      "cointoss": "Upon attacking with the weapon \"{weapon}\", <b>a malfunction happens</b>. <b><span class=\"fg-red\">A coin must be tossed</span></b> to determine what happens! Check the rules of the weapon for details!"
     }
   }
 }
