Remove redundancies related to old CPR versions or Foundry versions

--- a/languages/de.json
+++ b/languages/de.json
@@ -96,6 +96,9 @@
       "break-weapon": "Beim Angriff mit der Waffe \"{weapon}\" geht diese <b><span class=\"fg-red\">kaputt</span></b> und ist <b>nicht mehr verwendbar</b>!",
       "break-beyond-weapon": "Beim Angriff mit der Waffe \"{weapon}\" geht diese <b><span class=\"fg-red\">komplett kaputt</span></b> und ist <b>nicht mehr verwendbar</b>! <b><span class=\"fg-red\">Die Waffe ist nicht mehr reparierbar!</span></b>",
       "cointoss": "Beim Angriff mit der Waffe \"{weapon}\" ist eine <b>Fehlfunktion passiert</b>. <b><span class=\"fg-red\">Es muss eine Münze geworfen werden</span></b>! Schau in dem Regelwerk der Waffe nach was passiert!"
+    },
+    "template": {
+      "portal-missing": "In order to use the template placement feature, the module \"Portal\" by \"theripper93\" is required! Please install and activate it."
     }
   }
 }
